# Weather-API

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
weatherapp/: __init__.py  settings.py  weather.py
weatherapp/static/: index.js
weatherapp/templates/: index.html
